@@ -2,7 +2,7 @@
 
  - check user permissions (how to make only one host accessible?)
  - optimise update_trigger_status_after_restart()
- - special item. (last-prev)/time 
+ - special item. (last-prev)/time  (Update of frontend required!)
  - mess with user groups when running under root
  - support for PREFIX/zabbix/etc (configuration files)
  - trapper item. Source->Alarms do not grow when last status is unknown for
