@@ -1,5 +1,7 @@
 Changes for 1.0beta11:
 
+ - support of delta flag in item definition (Alexei)
+ - added column items.delta,prevorgvalue (Alexei)
  - support for operator '#', not equal. (Alexei)
  - support for functions date() and time() (Alexei)
  - fix of /proc/stat interpretation in diskdevice.c (Alexei)
